# data-map

./: .gitignore
DOC/: development-plan.md  technical-architecture.md
backend/: LICENSE  README.md  pyproject.toml
