[project]
name = "datamap-backend"
version = "0.1.0"
description = "Backend API for Data Map Application"
authors = [
    {name = "Guillaume",email = "guillaumeb2004@hotmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "fastapi (>=0.104.0,<0.105.0)",
    "uvicorn (>=0.24.0,<0.25.0)",
    "pydantic (>=2.4.2,<3.0.0)",
    "sqlalchemy (>=2.0.23,<3.0.0)",
    "psycopg2-binary (>=2.9.9,<3.0.0)",
    "pandas (>=2.1.3,<3.0.0)",
    "geopandas (>=0.14.1,<0.15.0)",
    "python-dotenv (>=1.0.0,<2.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.1"
pylint = "^3.0.2"
safety = "^2.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
